susah ye deploy

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 # ========== KONFIGURASI DATABASE ==========
-spring.datasource.url=jdbc:postgresql://localhost:5432/todoList
+spring.datasource.url=jdbc:postgresql://postgres:LOLOJLswmdQTlKgxgZCBqaqWnViFsDlG@postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
