--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 # ========== KONFIGURASI DATABASE ==========
-spring.datasource.url=jdbc:postgresql://postgres:LOLOJLswmdQTlKgxgZCBqaqWnViFsDlG@postgres.railway.internal:5432/railway
+spring.datasource.url=jdbc:postgresql://postgres:postgres.railway.internal:5432/railway?sslmode=require
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=LOLOJLswmdQTlKgxgZCBqaqWnViFsDlG
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ========== JPA & HIBERNATE ==========
