--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 # ========== KONFIGURASI DATABASE ==========
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway?sslmode=require
+spring.datasource.username=postgres
+spring.datasource.password=LOLOJLswmdQTlKgxgZCBqaqWnViFsDlG
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ========== JPA & HIBERNATE ==========
