brnrin config publik

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 # ========== KONFIGURASI DATABASE ==========
-spring.datasource.url=jdbc:postgresql://postgres:LOLOJLswmdQTlKgxgZCBqaqWnViFsDlG@switchback.proxy.rlwy.net:25152/railway?sslmode=require
+spring.datasource.url=jdbc:postgresql://switchback.proxy.rlwy.net:25152/railway?sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=LOLOJLswmdQTlKgxgZCBqaqWnViFsDlG
 spring.datasource.driver-class-name=org.postgresql.Driver
